--- a/src/app/UserAndGroupComponents/group-list/group-list.component.html
+++ b/src/app/UserAndGroupComponents/group-list/group-list.component.html
@@ -27,6 +27,9 @@
             <select formControlName="groupSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">
                 <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.name}}</option>
             </select>
+            <input type="file" name="file" id="file"  (change)="handleFileInput($event.target.files)" multiple accept="image/*" class="input-file"/>
+            <label for="file" class="btn btn-tertiary js-labelFile">
+            </label>
           </div>
       </form>
       <button class="btn btn-light btn-primary-spacing" (click)="createGroup()">Create</button>
