--- a/src/app/UserAndGroupComponents/post-card/post-card.component.html
+++ b/src/app/UserAndGroupComponents/post-card/post-card.component.html
@@ -2,12 +2,16 @@
 <div *ngIf="!deleted" class="blog-card">
     <div class="inner-part">
       <label class="img">
-        <img  src='https://mentoringgroup.com/files/images/puzzle-team.jpg'/>
+        <img *ngIf="group?.image==null"  src='https://mentoringgroup.com/files/images/puzzle-team.jpg'/>
+        <img *ngIf="group?.image!=null"  src='http://localhost:1234/getAdvImg/{{group.image}}'/>
       </label>
       <div class="content" *ngIf="!postSettingsVisible">
         <div class="title">{{group?.name}}</div>
         <h6>{{post.date}}</h6>
         <span>{{post.text}}</span>
+        <div class="imag" *ngFor="let img of post.images">
+          <img src='http://localhost:1234/getAdvImg/{{img}}'/>
+        </div>
       </div>
       <div class="content" *ngIf="postSettingsVisible">
         <form [formGroup]="ps.getPostSettingsForm()">
