аттачменты для объявлений

--- a/src/app/allusers/advertisement-card/advertisement-card.component.html
+++ b/src/app/allusers/advertisement-card/advertisement-card.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="true" class="blog-card" routerLink="/adv/{{adv.advertisementId}}">
     <div class="inner-part">
       <label class="img">
-        <img  src='http://localhost:1234/getAdvImg/{{adv.imageKeys[0]}}'/>
+        <img  src='https://avatars.mds.yandex.net/get-zen_doc/1852570/pub_5ca42593d92e0900b447a217_5ca9b9755db8e800b29281ca/scale_1200'/>
       </label>
       <div class="content ">
         <span>30 Январь 2020</span>
