--- a/src/app/allusers/advertisement/advertisement.component.scss
+++ b/src/app/allusers/advertisement/advertisement.component.scss
@@ -89,3 +89,23 @@ img{
 {
     height:100%;
 }
+
+
+.fontFile
+{
+    cursor: pointer;
+    font-size:30px;
+}
+.attachments
+{
+    margin-top:15px;
+    display:flex;
+}
+
+.fontFileName
+{
+    cursor: pointer;
+    font-size:15px;
+    margin-right:7px;
+}
+
