--- a/src/app/userpage2/userpage2.component.html
+++ b/src/app/userpage2/userpage2.component.html
@@ -96,7 +96,7 @@
                                 <div class="profile-info-name"> Роль </div>
 
                                 <div class="profile-info-value">
-                                    <span>Студент</span>
+                                    <span>{{user.roleName}}</span>
                                 </div>
                             </div>
 
