--- a/src/app/allusers/notifications/notifications.component.html
+++ b/src/app/allusers/notifications/notifications.component.html
@@ -1,6 +1,6 @@
 <div class="notifications">
   <div  class="notification"  *ngFor="let not of notifications; let i = index">
-       <span><a class="advHref" href='userPage/{{not.senderId}}'>{{not.senderUsername}}</a> &nbsp;</span><span>{{not.message}}</span> 
+       <span><a class="advHref" href='userPage/{{not.senderId}}'>{{not.senderFIO}}</a> &nbsp;</span><span>{{not.message}}</span> 
        <div class="notif-buttons">
         <button *ngIf="not.type=='TAKE_ADVERTISEMENT' || not.type=='RECEIVE_SERVICE'" type="button b" class="btn btn-success" (click)="onAccept(not)">Принять</button>
         <button type="button" *ngIf="not.type=='TAKE_ADVERTISEMENT' || not.type=='RECEIVE_SERVICE'" class="btn btn-warning"(click)="onReject(not)">Отклонить</button>
