--- a/src/app/ConversationComponents/dialogCard/dialog-card.component.html
+++ b/src/app/ConversationComponents/dialogCard/dialog-card.component.html
@@ -2,7 +2,8 @@
 <div *ngIf="true" class="blog-card" routerLink="/dialog/{{dg.dialogId}}">
     <div class="inner-part">
       <label class="img">
-        <img  src='https://www.egalochkina.ru/wp-content/uploads/2018/03/dialog-sokrata.jpg'/>
+        <img *ngIf="dg.image==null" src='https://www.egalochkina.ru/wp-content/uploads/2018/03/dialog-sokrata.jpg'/>
+        <img *ngIf="dg.image!=null && loading"  [src]="dialogImage"/>
       </label>
       <div class="content ">
         <div class="title">{{dg.name}}</div>
