Добавил фото для объявлений

--- a/src/app/allusers/advertisement/advertisement.component.html
+++ b/src/app/allusers/advertisement/advertisement.component.html
@@ -30,7 +30,7 @@
                                 {{adv.advertisementName}}                            
                             </div>
                             <div class="col-12 p-0 advertisement-img">
-                              <img src='https://avatars.mds.yandex.net/get-zen_doc/1852570/pub_5ca42593d92e0900b447a217_5ca9b9755db8e800b29281ca/scale_1200'/>    
+                              <img [src]="coverImage" />    
                             </div>
                             <div class="col-12  advertisement-des">                     
                                 <p class="tittle">Описание</p>
