--- a/src/app/student/add-advertisement/add-advertisement.component.html
+++ b/src/app/student/add-advertisement/add-advertisement.component.html
@@ -33,13 +33,30 @@
                 <div class="form-group">
                     <div class="example-2 mb-3">
                         <div class="form-group">
-                          <input type="file" name="file" id="file"  (change)="handleFileInput($event.target.files)" multiple accept="image/*" class="input-file"/>
-                          <label for="file" class="btn btn-tertiary js-labelFile">
+                          <input type="file" name="file" id="file1"  (change)="handleCoverFileInput($event.target.files)" multiple accept="image/*" class="input-file"/>
+                          <label for="file1" class="btn btn-tertiary js-labelFile">
                             <i class="icon fa fa-check"></i>
-                            <span class="js-fileName"> Загрузить Фотографии</span>
+                            <span class="js-fileName">  Загрузить фото </span>
                           </label>
                         </div>
-                       </div>
+                    </div>
+                </div>
+                <div *ngIf="coverName!=undefined" class="mb-2 all-images">
+                    <div class="mb-3" (click)="deleteCoverImage()">
+                        <span  matBadge="x"  matBadgeOverlap="false" >{{coverName}}</span>
+                    </div>
+               </div>
+
+                <div class="form-group">
+                    <div class="example-2 mb-3">
+                        <div class="form-group">
+                          <input type="file" name="file" id="file2"  (change)="handleFileInput($event.target.files)" multiple accept="image/*" class="input-file"/>
+                          <label for="file2" class="btn btn-tertiary js-labelFile">
+                            <i class="fas fa-paperclip"></i>
+                            <span class="js-fileName">  Прикрепить файлы</span>
+                          </label>
+                        </div>
+                    </div>
                 </div>
                 <div class="mb-2 all-images">
                     <div class="mb-3" *ngFor="let not of allNames; let i = index" (click)="deleteImageFromList(i)">
