--- a/src/app/UserAndGroupComponents/Group/group.component.html
+++ b/src/app/UserAndGroupComponents/Group/group.component.html
@@ -17,6 +17,8 @@
             <button mat-raised-button class="ml-2" routerLink="/dialog/{{group.dialogId}}" *ngIf="subscriber"><i class="fas fa-comments"></i> Чат</button>
             <button mat-raised-button class="ml-2" (click)="subscribeGroup()" *ngIf="!subscriber"><i class="fas fa-check"></i> Вступить</button>
             <button mat-raised-button class="ml-2" (click)="leaveGroup()" *ngIf="subscriber"><i class="fas fa-ban"></i> Покинуть</button>
+            <button mat-raised-button class="ml-2" (click)="notificationOn()" *ngIf="subscriber && !isNotificationsOn"><i class="fas fa-check"></i> Включить уведомления</button>
+            <button mat-raised-button class="ml-2" (click)="notificationOff()" *ngIf="subscriber && isNotificationsOn"><i class="fas fa-ban"></i> Выключить уведомления</button>
           </div>
         </div>
         <div class="post-part">
