--- a/src/app/UserAndGroupComponents/Group/group.component.scss
+++ b/src/app/UserAndGroupComponents/Group/group.component.scss
@@ -80,7 +80,7 @@
 }
 
 .content{
-  width:50%;
+  width:40%;
   height:80%;
   display: flex;
   margin-left: 10px;
@@ -121,7 +121,7 @@
 }
 
 .buttons button{
-  margin: 10px;
+  margin-top: 10px;
 }
 
 .notification {
