update userPage and orders

--- a/src/app/admin/teacher-documents/teacher-documents.component.html
+++ b/src/app/admin/teacher-documents/teacher-documents.component.html
@@ -1,3 +1,5 @@
+  
+ <app-navbar></app-navbar>
 <div class="container mt-5">
   <div class="checkBlock">
     <mat-button-toggle-group name="fontStyle" aria-label="Font Style" value="{{check}}">
@@ -56,7 +58,7 @@
         <div class="modal-body">
         <h4> {{message}}</h4>
         </div>
-        <div class="modal-footer">
+        <div *ngIf="!sended" class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Нет</button>
           <button type="button" (click)="submit()" class="btn btn-primary">Да</button>
         </div>
