--- a/src/app/admin/change-user-properties/change-user-properties2.component.html
+++ b/src/app/admin/change-user-properties/change-user-properties2.component.html
@@ -33,7 +33,7 @@
     </ng-container>
 
     <ng-container matColumnDef="isDeleted">
-      <th mat-header-cell *matHeaderCellDef> Заблокированный </th>
+      <th mat-header-cell *matHeaderCellDef> Заблокированный </th>modal-backdrop fade show
       <td mat-cell *matCellDef="let element"> {{element.isDeleted}} </td>
     </ng-container>
 
@@ -51,9 +51,9 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
+  <div  class="modal fade bd-example-modal-lg"  tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="false">
+    <div  class="modal-dialog modal-lg">
+      <div  class="modal-content">
         <form [formGroup]="service.getEditForm()" class="mt-5">
           <div class="container">
               <div class="row d-flex flex-column justify-content-center  align-items-center">
@@ -88,7 +88,7 @@
            <select  formControlName="userRole" class="custom-select">
               <option selected value="ROLE_ADMIN">Администратор</option>
               <option value="ROLE_TEACHER">Преподователь</option>
-              <option value="ROLE_USER">Студент</option>
+              <option value="ROLE_STUDENT">Студент</option>
            </select>
             </div>
             <button type="button" class="btn btn-primary mb-4"  data-toggle="modal" data-target="#editModal" data-whatever="@mdo">Изменить</button>
