--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,10 +2,12 @@
 <nav class="navbar navbarx navbar-dark bg-dark">
     <div class="navbar-blocks">
         <div class="navbar-menu">
-            <a *ngIf="isLogin && !isAdmin" mat-raised-button class="ml-2" routerLink="/user/addnewAdvertisement"><i class="fas fa-plus-circle"></i> Добавить Объявление</a>
+            <a *ngIf="isLogin && !isAdmin" mat-raised-button class="mr-2" routerLink="/user/addnewAdvertisement"><i class="fas fa-plus-circle"></i> Добавить Объявление</a>
             <a  *ngIf="isAdmin" mat-raised-button class="mr-2" routerLink="/admin/changeprop">Пользователи</a>
-            <a  *ngIf="isAdmin" mat-raised-button class="mr-2" routerLink="/admin/rolecontrol">Роли</a>
-            <a  *ngIf="isAdmin" mat-raised-button routerLink="/admin/subjectcontrol">Предметы</a>
+            <a  *ngIf="isAdmin" mat-raised-button сlass="m-2" routerLink="/admin/allDocuments">Документы</a>
+            <a  *ngIf="isAdmin" mat-raised-button class="ml-2" routerLink="/admin/rolecontrol">Роли</a>
+            <a  *ngIf="isAdmin" mat-raised-button  class="ml-2"routerLink="/admin/subjectcontrol">Предметы</a>
+           
         </div>
           <div class="navbar-auth" *ngIf="!isLogin">
               <a mat-raised-button class="mr-4" routerLink="/signin">Войти</a>
