--- a/src/app/userpage2/userpage2.component.html
+++ b/src/app/userpage2/userpage2.component.html
@@ -1,20 +1,20 @@
 <app-navbar></app-navbar>
-<div class="user-page">
+<div class="user-page" *ngIf="loading || loadingError">
 <div id="user-profile-2" class="user-profile">
     <div class="tabbable">
         <div class="tab-content no-border padding-24">
             <div id="home" class="tab-pane in active">
                 <div class="row">
                     <div class="col-xs-12 col-sm-3 center">
+                        
                         <span  *ngIf="user.userImageKey!=undefined && loading" class="profile-picture">
                             <img class="prof" alt=" Avatar" id="avatar2" [src]="profileImage">
                         </span>
 
-                        <span  *ngIf="user.userImageKey==undefined || !loading"class="profile-picture">
+                        <span  *ngIf="user.userImageKey==undefined || loadingError"class="profile-picture">
                             <img class="prof" alt=" Avatar" id="avatar2" src="https://borodast.com/uploads/images/pages/c82a9dad9c9ebf9a908b9c5942f84fda90c24164.jpeg">
                         </span>
-
-                  
+                        
                         <div class="space space-4"></div>
 
                         <a *ngIf="friendStatus == 'none'" (click)="addFriend()" class="btn btn-sm btn-block btn-success">
@@ -113,26 +113,64 @@
 
                 <div class="row mt-4">
                     <div class="col-xs-12 col-sm-6">
-                        <div class="widget-box transparent">
-                            <div *ngIf="user.roleName=='ROLE_TEACHER'" class="widget-header widget-header-small">
+                        <div class="widget-box transparent"> 
+                            
+                            <div class="all-tables m-3">
+                                <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+                                    <mat-button-toggle *ngIf="user.roleName=='ROLE_TEACHER'" (click)="getFeedBack()" value="ORDER">Отзывы</mat-button-toggle>
+                                    <mat-button-toggle (click)="checkAdvEvent()" value="ADVERTISEMENT">Объявления</mat-button-toggle>
+                                    <mat-button-toggle (click)="checkFriendsEvent()" value="FRIENDS">Друзья</mat-button-toggle>
+                                    <mat-button-toggle (click)="checkGroupsEvent()" value="GROUPS">Группы</mat-button-toggle>
+                                    <mat-button-toggle *ngIf="user.roleName=='ROLE_TEACHER'" (click)="checkAboutMeEvent()" value="AboutMe">О себе</mat-button-toggle>
+                                    <mat-button-toggle *ngIf="user.roleName=='ROLE_TEACHER'" (click)="checkDocumentsEvent()"value="Documents">Документы</mat-button-toggle>
+                                    <mat-button-toggle *ngIf="id !=myId && myId!=undefined" (click)="checkRequestEvent()"value="Requests">Запросы от пользователя</mat-button-toggle>
+                                  </mat-button-toggle-group>
+                            </div>
+                            
+
+                            <div *ngIf="checkRequests" class="widget-header widget-header-small">
+                                <h4 class="widget-title smaller">
+                                    <i class="ace-icon fa fa-check-square-o bigger-110"></i>
+                                    Запросы
+                                </h4>
+                            </div>
+
+                            <div *ngIf="checkRequests" class="widget-body">
+                                <div class="widget-main">
+                                    <div  *ngFor="let not of notifications; let i = index">
+                                        <span >{{not.message}}</span> 
+                                        <div class="notif-buttons mt-2">
+                                            <a href="/myorders"><button type="button b" class="btn btn-success mr-2" (click)="onAccept(not)">Принять</button></a>
+                                            <button type="button" class="btn btn-warning mr-2" (click)="onReject(not)">Отклонить</button>
+                                            <button  type="button" class="btn btn-success" ><a href="/adv/{{not.advertisementId}}" class="ft">Поднобнее</a></button>
+                                            </div>
+                                        </div>  
+                                </div>
+                            </div>
+                          
+
+                            <div *ngIf="checkAboutMe" class="widget-header widget-header-small">
                                 <h4 class="widget-title smaller">
                                     <i class="ace-icon fa fa-check-square-o bigger-110"></i>
                                     O cебе
                                 </h4>
                             </div>
 
-                            <div *ngIf="user.roleName=='ROLE_TEACHER'" class="widget-body">
+                            <div *ngIf="checkAboutMe" class="widget-body">
                                 <div class="widget-main">
                                     <p> {{user.aboutMe}}</p>
                                 </div>
                             </div>
 
-                            <h4 *ngIf="user.roleName=='ROLE_TEACHER'" class="widget-title smaller mb-3">
+                            <h4 *ngIf="checkDocuments" class="widget-title smaller mb-3">
                                 <i class="ace-icon fa fa-check-square-o bigger-110"></i>
                                 Сертификаты и Документы
                             </h4>
 
-                            <div *ngIf="user.roleName=='ROLE_TEACHER'" class="widget-body">
+                            
+
+
+                            <div *ngIf="checkDocuments" class="widget-body">
                                 <div class="widget-main" class="d-flex flex-direction-column">
                                     <span *ngFor="let doc of user.documentKeys; let i = index" class="mr-2">
                                         <div (click)="download(doc)" ><i class="fas fa-file fontFile"></i></div>
@@ -141,22 +179,16 @@
                                 </div>
                             </div>
 
-
-                            <div class="all-tables mt-3">
-                                <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-                                    <mat-button-toggle *ngIf="user.roleName=='ROLE_TEACHER'" (click)="checkFeedBackEvent()" value="ORDER">Отзывы</mat-button-toggle>
-                                    <mat-button-toggle (click)="checkAdvEvent()" value="ADVERTISEMENT">Объявления</mat-button-toggle>
-                                    <mat-button-toggle (click)="checkFriendsEvent()" value="FRIENDS">Друзья</mat-button-toggle>
-                                    <mat-button-toggle (click)="checkGroupsEvent()" value="GROUPS">Группы</mat-button-toggle>
-                                  </mat-button-toggle-group>
+                            <div *ngIf="checkFeedBack && user.roleName=='ROLE_TEACHER'" class="feedBacks">
+                                <div *ngFor="let f of feed; let i = index" class="feedback-block">
+                                    <div><b>Пользователь {{i+1}}</b></div>
+                                    <div>Оценки - {{f.starsForWork}}</div>
+                                    <div>Комментарий - {{f.comment}}</div>
+                                </div>
                             </div>
-                            <div *ngIf="checkFeedBack && user.roleName=='ROLE_TEACHER'" class="order-page">
-                                <div>
-                                    XNXX
-                                  </div>
-                                  </div>
+                            
                                   <div *ngIf="checkAdv">
-                                    <div class="all-adv m-5">
+                                    <div class="all-adv">
                                         <p *ngFor="let advx of advs; let i = index">
                                            <app-advertisement-card [(adv)]="advx"></app-advertisement-card>
                                         <p>
